--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/specialDays.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/specialDays.html.twig
@@ -7,7 +7,7 @@
 '@BusybeeInstitute/Calendar/specialDay.html.twig'
 'BusybeeFormBundle:Template:bootstrap.html.twig' %}
 
-{% include 'BusybeeInstituteBundle:Calendar:calendarMenu.html.twig' with {'header': 'calendar.specialDay.title', 'name': form.name.vars.value} %}
+{% include 'BusybeeInstituteBundle:Calendar:calendarMenu.html.twig' with {'header': 'calendar.specialDay.title', 'name': form.name.vars.value, 'panelParagraph': 'calendar.help.specialDays'} %}
 	{{ form_widget(form.specialDays) }}
 {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 
