--- a/src/Busybee/FamilyBundle/Resources/views/Family/students.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/students.html.twig
@@ -3,10 +3,10 @@
 {% trans_default_domain "BusybeeFamilyBundle" %}
 
 {% form_theme form
+"BusybeeFormBundle:Template:bootstrap.html.twig"
 "BusybeeFormBundle:Template:jquery.collection.html.twig"
-"BusybeeFamilyBundle:Family:studentCollection.html.twig"
-"BusybeeFormBundle:Template:bootstrap.html.twig" %}
-
+"BusybeeFamilyBundle:Family:careGiverCollection.html.twig"
+"BusybeeFamilyBundle:Family:studentCollection.html.twig" %}
 
 <div class="panel panel-info busybee-panel">
     <div class="panel-heading">
