--- a/src/Busybee/PersonBundle/Resources/views/Person/phones.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/phones.html.twig
@@ -3,11 +3,11 @@
 {% trans_default_domain "BusybeePersonBundle" %}
 
 {% form_theme form
-	"BusybeeFormBundle:Template:jquery.collection.html.twig"
-	"BusybeePersonBundle:Form:phoneCollection.html.twig"
-	"BusybeeFormBundle:Template:bootstrap.html.twig"
+"BusybeeFormBundle:Template:bootstrap.html.twig"
+"BusybeeFormBundle:Template:jquery.collection.html.twig"
+"BusybeePersonBundle:Form:phoneCollection.html.twig"
+"BusybeeStudentBundle:Person:enrolmentCollection.html.twig"
 %}
-
 
 <div class="panel panel-info busybee-panel">
 	<div class="panel-heading">
