--- a/src/Busybee/FamilyBundle/Resources/views/Family/edit.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/edit.html.twig
@@ -4,7 +4,11 @@
 
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
-{% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
+{% form_theme form
+"BusybeeFormBundle:Template:bootstrap.html.twig"
+"BusybeeFormBundle:Template:jquery.collection.html.twig"
+"BusybeeFamilyBundle:Family:careGiverCollection.html.twig"
+"BusybeeFamilyBundle:Family:studentCollection.html.twig" %}
 
 {% block stylesheets %}
     {{ parent() }}
