--- a/src/Busybee/StudentBundle/Resources/views/Person/student.html.twig
+++ b/src/Busybee/StudentBundle/Resources/views/Person/student.html.twig
@@ -2,10 +2,8 @@
 
 {% trans_default_domain "BusybeeStudentBundle" %}
 
-{% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
-
 <div class="panel panel-primary busybee-panel">
-    {% include "BusybeePersonBundle:Person:panelHeader.html.twig"  with {'header': 'person.student.title'} %}
+    {% include '@BusybeePerson/Person/panelHeader.html.twig' with {'header': 'family.title.contacts'} %}
     <div class="panel-body">
         <div class="container-fluid">
             <div class="row">
@@ -53,46 +51,5 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-info busybee-panel">
-            {% include "BusybeePersonBundle:Person:panelHeader.html.twig"  with {'header': 'person.student.immigrationTitle'} %}
-            <div class="panel-body">
-                <div class="container-fluid well">
-                    <div class="row">
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.citizenship1) }}
-                        </div>
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.citizenship1Passport) }}
-                        </div>
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.citizenship1PassportScan) }}
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.citizenship2) }}
-                        </div>
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.citizenship2Passport) }}
-                        </div>
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.visaExpiryDate) }}
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.nationalIDCardNumber) }}
-                        </div>
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.nationalIDCardScan) }}
-                        </div>
-                        <div class="col-sm-4 well">
-                            {{ form_row(form.student.residencyStatus) }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+        {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 
