--- a/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
@@ -168,6 +168,7 @@
             }
         });
 
+        {% if form.student.enrolments is defined %}
         $(".enrolmentList").collection({
             name_prefix: '{{ form.student.enrolments.vars.full_name }}',
             allow_up: false,
@@ -176,5 +177,6 @@
             remove: '<button title="{{ 'student.enrolment.remove'|trans({}, 'BusybeeStudentBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
             add_at_the_end: true
         });
+        {% endif %}{{ dump(form.student) }}
 
     </script>
