At Person Extra Table and move vehicleRegistration from careGiver to Extra table.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
@@ -177,6 +177,6 @@
             remove: '<button title="{{ 'student.enrolment.remove'|trans({}, 'BusybeeStudentBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
             add_at_the_end: true
         });
-        {% endif %}{{ dump(form.student) }}
+        {% endif %}
 
     </script>
