--- a/src/Busybee/InstituteBundle/Resources/views/Campus/spaces.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Campus/spaces.html.twig
@@ -1,28 +1,28 @@
-{# src/Busybee/InstituteBundle/Resources/views/Campus/resources.html.twig #}
+{# src/Busybee/InstituteBundle/Resources/views/Campus/spaces.html.twig #}
 
 {% trans_default_domain "BusybeeInstituteBundle" %}
 
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
-{% block title %}{{ parent() }}{{ 'campus.resources.title'|trans }}{% endblock title %}
-{% block headerTitle %}{{ 'campus.resources.title'|trans }}{% endblock headerTitle %}
-{% block headerLead %}{{ 'campus.resources.description'|trans }}{% endblock headerLead %}
+{% block title %}{{ parent() }}{{ 'campus.spaces.title'|trans }}{% endblock title %}
+{% block headerTitle %}{{ 'campus.spaces.title'|trans }}{% endblock headerTitle %}
+{% block headerLead %}{{ 'campus.spaces.description'|trans }}{% endblock headerLead %}
 
 {% block contentContainer %}
     {% include 'PaginationBundle:Default:index.html.twig' %}
     {% set h3Content = addButton({'windowOpen': {'route': path('campus_resource_edit', {'id': 'Add'})}}) %}
-    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'campus.resources.title', 'transDomain': 'BusybeeInstituteBundle'} %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'campus.spaces.title', 'transDomain': 'BusybeeInstituteBundle'} %}
     <div class="container-fluid">
         <div class="row row-header">
             <div class="col-sm-3 col-md-3" style="display: inline-block;">
                 {% if pagination.getSortByName == 'Name' %}
-                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'campus.resources.name'|trans }}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'campus.spaces.name'|trans }}
                 {% else %}
-                    {{ 'campus.resources.name'|trans }}
+                    {{ 'campus.spaces.name'|trans }}
                 {% endif %}
             </div>
             <div class="col-sm-6 col-md-6" style="display: inline-block;">
-                {{ 'campus.resources.comment'|trans }}
+                {{ 'campus.spaces.comment'|trans }}
             </div>
             <div class="col-sm-3 col-md-3 withAdd">
                 {{ 'actions'|trans({}, 'BusybeeHomeBundle') }}
@@ -38,7 +38,7 @@
                 <div class="col-sm-3 col-md-3 form-inline">
                 </div>
                 <div class="col-sm-3 col-md-3 form-inline">
-                    <button title='{{ 'campus.resource.edit.title'|trans }}' type="button"
+                    <button title='{{ 'campus.space.edit.title'|trans }}' type="button"
                             class="halflings halflings-edit btn btn-warning"
                             onClick="window.open('{{ path('campus_resource_edit', {'id': resource.id}) }}','_self')"></button>
                 </div>
